# SIMAP

./: .gitignore  README.md  company_profile.json  host.json  internal_reference_pack.md  null  posted_projects_analysis_test.json  posted_projects_button_test.json  posted_projects_manual_rerun.json  posted_projects_repost_test.json  pyproject.toml  requirements.txt
.azure/: plan.md
docs/: copilot_monthly_reference_pack_prompt.md
simap_agent/: analysis_queue.py  analysis_report.py  azure_storage.py  config.py  detail_analysis.py  enricher.py  feedback_store.py  main.py  posted_store.py  project_store.py  relevance.py  simap_client.py  slack_client.py  slack_interaction.py
simap_analysis_worker/: __init__.py  function.json
simap_interaction_worker/: __init__.py  function.json
slack_interaction/: __init__.py  function.json
tests/: test_simap.py
